feat/users: user register and activation
